# RBE

./: .gitignore  CORDIC.md  Cargo.toml  DCT.md  README.md  REFACTOR.md  decoding.md  download_tokenizer.py  extract_weights.py  new.md  rules.mdc  run_inference.sh  run_korean_demo.sh  run_nlp_tests.sh  setup_korean_test_model.py
docs/: 01_Types.md  02_Encoding.md  03_Decoding.md  04_Generation.md  05_Math.md  06_Matrix.md  07_Hybrid_Learning_Paradigm.md  DYNAMIC_LOADING_ARCHITECTURE.md
docs/api/: PERFORMANCE_REPORT.md  SLLM_API.md
docs/api/core/: decoder.md  differential.md  encoder.md  generator.md  math.md  matrix.md  optimizers.md  systems.md  types.md
docs/math/: 01_RBE_수학적_기초_및_푸앵카레볼_기하학.md  02_Packed64_최적화_구조_및_성능_분석.md  03_RBE_압축_알고리즘_및_복원_메커니즘.md  04_리만_최적화_이론_및_자연_그래디언트.md  05_신경망_레이어_구현_및_RBE_적용.md  06_RBE_언어모델_완전구현_및_최적화.md  07_RBE_최적화_알고리즘_및_미분_시스템.md  08_RBE_변환_시스템_및_모델_압축복원.md
docs/mlp/: Chapter01_Introduction_Foundation.md  Chapter02_RBETensor_Implementation.md  Chapter03_Compressed_Domain_Operations.md  Chapter04_RBE_Linear_Layer.md  Chapter05_LayerNorm_RBE.md  Chapter06_MultiHead_Attention.md  Chapter07_FeedForward_MLP.md  Chapter08_Transformer_Block.md  Chapter09_GPT2_Model_Integration.md  Chapter10_Deployment_Optimization.md  RBE_GPT2_IMPLEMENTATION_PLAN.md
docs/nlp/: 00_Complete_Implementation_Roadmap.md  01_RBETensor_Implementation.md  02_Basic_Layers.md  03_Testing_Framework.md  04_Core_Concepts_Definition.md  05_Implementation_Verification.md  Layer_Optimization_Guide.md  RBETensor_Design_Plan.md  README.md
docs/paper/: 01_Intro.md  02_Encoding.md  03_Decoding.md  04_Generation.md  05_Math.md  07_Hybrid_Learning_Paradigm.md  08_Hybrid_Layer.md  09_Optimize.md  10_llm_RBE_Conversion.md  11_IEEE754_Bitwise_Gradient.md  12_11비트_미분_사이클_128비트_푸앵카레볼_수학적_표현.md  12_11비트_미분_사이클_시스템.md  13_RBE_블록크기_계수_최적화_수학적_일반식.md  14_푸앵카레볼_DWT_편미분_변곡점_수학적_유도.md  15_RBE_비트_자동미분_해석수치_분리_시스템.md  15_RBE_자동미분_시스템_설계.md  16_RBE_비트_자동미분_시스템_설계.md  17_RBE_차세대_성능_최적화_푸앵카레볼_정밀도_개선.md  18_RBE_Packed64_원리_및_구현.md  19_RBE_최종_구현_원리_및_가이드.md  IEEE_754.md  PAPER_POINCARE_RBE.md  example.md
docs/post/: metric_bitfield.md
docs/test/: accuracy_analysis_report.md  accuracy_validation_plan.md  core_best_performance_summary.md  core_performance_analysis.md  core_performance_summary.md  core_refactoring_final_report.md  decoder_refactoring_report.md  differential_report.md  differential_test.md  encoder_refactoring_report.md  encoder_report.md  encoding_decoding_performance_report.md  math_optimizer_analysis.md  metric_tensor_analysis.md  nlp_layers_performance_report.md  nlp_performance_analysis.md  poincare_ball_improvement_plan.md  rbe_linear_performance_report.md
examples/: accuracy_validation.rs  korean_sllm_demo.rs  nlp_layers_demo.rs  rbe_demo.rs  simple_accuracy_test.rs  test_performance.rs
models/skt-kogpt2-base-v2/: config.json  tokenizer_config.json
new/: dct_gravity_compression.py  encoder_updated.rs  higher_dim_compression_test.py  higher_dim_compression_test_spacetime.py  rbe_gravity_compression.py  rbe_gravity_compression_large.py
src/: decoder.rs  encoder.rs  generator.rs  layer.rs  lib.rs  main.rs  math.rs  matrix.rs  test_memory_size.rs  types.rs
src/core/: decoder.rs  encoder.rs  math.rs  matrix.rs  mod.rs  types.rs
src/core/__tests__/: integration_test.rs  mod.rs
src/core/decoder/: block_decoder.rs  caching_strategy.rs  cordic.rs  fused_forward.rs  grid_decoder.rs  mod.rs  model_loader.rs  optimized_decoder.rs  weight_generator.rs
src/core/differential/: backward.rs  bit_dp_system.rs  cycle_system.rs  forward.rs  mod.rs  state_transition.rs
src/core/encoder/: analysis_results.rs  encoder.rs  grid_compressor.rs  hybrid_encoder.rs  metric_encoder.rs  mod.rs  mulaw.rs  (+3 more)
src/llm/: llm_analyzer.rs  mod.rs  rbe_converter.rs  tests.rs
src/nlp/: accuracy_utils.rs  bert_inference.rs  candle_comparison_test.rs  mod.rs
src/sllm/: api_server.rs  benchmark.rs  inference_engine.rs  korean_generator.rs  korean_llm.rs  mod.rs  model_downloader.rs  pytorch_loader.rs  rbe_compression.rs  simple_loader.rs
src/tests/: compression_demo_test.rs  dct_only_test.rs  decoder_test.rs  encoder_test.rs  generator_test.rs  hf_connection_test.rs  hybrid_learning_test.rs  korean_basic_test.rs  korean_llm_demo_test.rs  llm_korean_test.rs  math_test.rs  matrix_test.rs  mod.rs  simple_korean_test.rs  types_test.rs
tests/: adam_perf_test.rs  decoding_test.rs  deep_compress_test.rs  encoding_test.rs  fused_layer_test.rs  generation_test.rs  genetic_algorithm_test.rs  integration_test.rs  math_test.rs  matrix_64x64_test.rs  matrix_test.rs  mod.rs  optimizer_comparison_test.rs  performance_test.rs  rbe_layer_integration_test.rs
tests/core/: mod.rs
tests/nlp/: mod.rs
(+199 files in other folders)
