[package]
name = "rbe_llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "compress_model"
path = "src/bin/compress_model.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[[bin]]
name = "test_models"
path = "src/bin/test_models.rs"

[[bin]]
name = "compress_multi"
path = "src/bin/compress_multi.rs"

[[bin]]
name = "compress"
path = "src/bin/compress.rs"

# SLLM API 도구들
[[bin]]
name = "rbe-server"
path = "src/bin/rbe_server.rs"

[[bin]]
name = "rbe-cli"
path = "src/bin/rbe_cli.rs"

[[bin]]
name = "rbe-inference"
path = "src/bin/rbe_inference.rs"

[[bin]]
name = "korean-rbe"
path = "src/bin/korean_rbe.rs"

[dependencies]
# 기존 의존성들
rand = "0.8"
approx = "0.5"
rustfft = "6.4.0"
noise = "0.9.0"
rayon = "1.10.0"
microfft = "0.6.0"
rustdct = "0.7.1"
omni-wave = "0.2.1"
ndarray-stats = "0.6.0"
nalgebra = "0.33.2"
ndarray = { version = "0.15.6", features = ["rayon"] }
libm = "0.2"
serde = { version = "1.0", features = ["derive"] }
num_cpus = "1.0"
indicatif = "0.17"

# HTTP 및 네트워킹
hf-hub = { version = "0.3", features = ["tokio"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# SLLM API 새 의존성들
clap = { version = "4.0", features = ["derive"] }
warp = "0.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"

# 모델 로딩 및 처리
safetensors = "0.4"
memmap2 = "0.9"
half = "2.3"

# Python 연동 (옵셔널)
pyo3 = { version = "0.21", features = ["auto-initialize", "gil-refs"], optional = true }
numpy = { version = "0.21", optional = true }

# 토크나이저
tokenizers = "0.21"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
bincode = "2.0.1"
once_cell = "1.21.3"

[dependencies.tch]
version = "0.16"
optional = true

# Test dependencies
[dev-dependencies]
